spacing issue fix

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -281,7 +281,7 @@ p {
 }
 
 button.MuiIconButton-root {
-  padding: 5px 0px;
+  padding: 13px;
 }
 
 label {
